# path = root/src/ila_ir/ast

include_directories ("${CMAKE_SOURCE_DIR}/include")

#file(GLOB ILA_IR_AST_SRC "${CMAKE_CURRENT_SOURCE_DIR}/*.cc")
#add_library(ila_ir_ast ${ILA_IR_AST_SRC})
#install(TARGETS ila_ir_ast DESTINATION bin)
#install(FILES "${CMAKE_SOURCE_DIR}/include/ila_ast.h" DESTINATION include)
